--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h5>A ship in harbor is safe. But that is not what ships are built for. </h5>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <meta name="Description" content="Code Resume " />
+    <title>Code Resume</title>
+    <link rel="icon" href="/favicon.png" type="image/png" />
+  <meta name="theme-color" content="#241b2f" /><link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials" /></head>
+
+  <body>
+    <div id="root"></div>
+
+    <script>
+      // Check that service workers are supported
+      if ("serviceWorker" in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener("load", () => {
+          navigator.serviceWorker.register("/service-worker.js");
+        });
+      }
+    </script>
+  <script type="text/javascript" src="/bundle.js"></script></body>
+</html>
